--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "api-limiter",
+  "name": "node-api-limiter",
   "version": "1.0.0",
-  "description": "A Library to add the limits on the routes in express server.",
+  "description": "A Library to add the limits on the routes in server.",
   "scripts": {
     "start": "node lib/main.js",
     "test": "./node_modules/jest/bin/jest.js",
@@ -49,8 +49,10 @@
   },
   "homepage": "https://github.com/zee7han/api-limiter#readme",
   "dependencies": {
-    "express": "4.17.1",
-    "jest": "26.4.2",
     "redis": "3.0.2"
+  },
+  "devDependencies": {
+    "express": "4.17.1",
+    "jest": "26.6.3"
   }
 }
